--- a/1/EomTool/EomToolWeb/Views/Campaigns/ListSortableInner.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/ListSortableInner.cshtml
@@ -11,6 +11,7 @@
 }
 
 <h2>Campaigns</h2>
+<div id="divLoading" style="display:none">Loading...</div>
 
 <table id="tableListSortable" data-sort="@Model.Sort" data-desc="@Model.SortDesc" style="border: 1px solid gray; border-spacing: 10px 0; border-collapse: inherit">
     <tr>
