--- a/1/EomTool/EomToolWeb/Views/Advertisers/Show.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Advertisers/Show.cshtml
@@ -21,6 +21,10 @@
             <td>@Html.DisplayFor(m => m.status)</td>
         </tr>
         <tr>
+            <td>@Html.LabelFor(m => m.payment_terms)</td>
+            <td>@Html.DisplayFor(m => m.payment_terms)</td>
+        </tr>
+        <tr>
             <td>@Html.LabelFor(m => m.invoicing_status)</td>
             <td>@Html.DisplayFor(m => m.invoicing_status)</td>
         </tr>
