--- a/1/EomTool/EomToolWeb/Views/Advertisers/Show.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Advertisers/Show.cshtml
@@ -10,23 +10,23 @@
     <table>
         <tr>
             <td>@Html.LabelFor(m => m.id)</td>
-            <td>@Html.DisplayFor(m => m.id)</td>
+            <td class="bold">@Html.DisplayFor(m => m.id)</td>
         </tr>
         <tr>
             <td>@Html.LabelFor(m => m.name)</td>
-            <td>@Html.DisplayFor(m => m.name)</td>
+            <td class="bold">@Html.DisplayFor(m => m.name)</td>
         </tr>
         <tr>
             <td>@Html.LabelFor(m => m.status)</td>
-            <td>@Html.DisplayFor(m => m.status)</td>
+            <td class="bold">@Html.DisplayFor(m => m.status)</td>
         </tr>
         <tr>
             <td>@Html.LabelFor(m => m.payment_terms)</td>
-            <td>@Html.DisplayFor(m => m.payment_terms)</td>
+            <td class="bold">@Html.DisplayFor(m => m.payment_terms)</td>
         </tr>
         <tr>
             <td>@Html.LabelFor(m => m.invoicing_status)</td>
-            <td>@Html.DisplayFor(m => m.invoicing_status)</td>
+            <td class="bold">@Html.DisplayFor(m => m.invoicing_status)</td>
         </tr>
     </table>
 </fieldset>
