--- a/1/EomTool/EomToolWeb/Views/Affiliates/Show.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Affiliates/Show.cshtml
@@ -10,31 +10,31 @@
     <table>
         <tr>
             <td>@Html.LabelFor(m => m.affid, "AffId")</td>
-            <td>@Html.DisplayFor(m => m.affid)</td>
+            <td class="bold">@Html.DisplayFor(m => m.affid)</td>
         </tr>
         <tr>
             <td>@Html.LabelFor(m => m.name, "Name")</td>
-            <td>@Html.DisplayFor(m => m.name)</td>
+            <td class="bold">@Html.DisplayFor(m => m.name)</td>
         </tr>
         <tr>
             <td>@Html.LabelFor(m => m.status, "Status")</td>
-            <td>@Html.DisplayFor(m => m.status)</td>
+            <td class="bold">@Html.DisplayFor(m => m.status)</td>
         </tr>
         <tr>
             <td>@Html.LabelFor(m => m.MediaBuyer)</td>
-            <td>@Html.DisplayFor(m => m.MediaBuyer.name)</td>
+            <td class="bold">@Html.DisplayFor(m => m.MediaBuyer.name)</td>
         </tr>
         <tr>
             <td>@Html.LabelFor(m => m.NetTermType, "NetTerms")</td>
-            <td>@Html.DisplayFor(m => m.NetTermType.name)</td>
+            <td class="bold">@Html.DisplayFor(m => m.NetTermType.name)</td>
         </tr>
         <tr>
             <td>@Html.LabelFor(m => m.AffiliatePaymentMethod, "PaymentMethod")</td>
-            <td>@Html.DisplayFor(m => m.AffiliatePaymentMethod.name)</td>
+            <td class="bold">@Html.DisplayFor(m => m.AffiliatePaymentMethod.name)</td>
         </tr>
         <tr>
             <td>@Html.LabelFor(m => m.Currency)</td>
-            <td>@Html.DisplayFor(m => m.Currency.name)</td>
+            <td class="bold">@Html.DisplayFor(m => m.Currency.name)</td>
         </tr>
     </table>
 </fieldset>
