--- a/1/EomTool/EomToolWeb/Views/Admin/Index.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Admin/Index.cshtml
@@ -15,3 +15,5 @@ Accounting Period:
 @Html.ActionLink("Media Buyer Approvals", "Summary", "Payouts")<br />
 @Html.ActionLink("Invoice Requests", "Summary", "Invoices")<br />
 @Html.ActionLink("Extra Item Importer", "Import", "ExtraItems")<br />
+<br />
+@Html.ActionLink("Settings", "Settings", "Admin")<br />
