--- a/1/EomTool/EomToolWeb/Views/Advertisers/Index.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Advertisers/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Advertisers";
 }
 
-<h3>@Html.ActionLink("Admin", "Index", "Admin") - Advertisers</h3>
+<h3>@Html.ActionLink("EOM Admin", "Index", "Admin") - Advertisers</h3>
 
 Accounting Period:
 @Html.Partial("ChooseMonth", (SelectList)ViewBag.ChooseMonthSelectList)
