--- a/1/EomTool/EomToolWeb/Views/Workflow/AffiliateDrilldown.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Workflow/AffiliateDrilldown.cshtml
@@ -1,5 +1,6 @@
 ﻿@model CampaignAffiliateAmountsModel
 @{
+    ViewBag.Title = "Affiliate Drilldown";
     int?[] statuses = { null, CampaignStatus.Default, CampaignStatus.Finalized, CampaignStatus.Verified };
 }
 
