--- a/1/EomTool/EomToolWeb/Views/Workflow/Index.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Workflow/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model WorkflowModel
 @{
+    ViewBag.Title = "Campaign Summary";
     int?[] statuses = { null, CampaignStatus.Default, CampaignStatus.Finalized, CampaignStatus.Verified };
 }
 
