--- a/1/EomTool/EomToolWeb/Views/Workflow/CampaignAffiliateAmounts.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Workflow/CampaignAffiliateAmounts.cshtml
@@ -14,12 +14,16 @@
         <th>#Units</th>
         <th colspan="2">Revenue</th>
         <th>Invoiced</th>
-        @if (Model.ShowCheckboxes)
+        @if (Model.ShowInvoiceCheckboxes)
         {
             <th colspan="2" style="text-align: left">&nbsp;Include</th>
         }
         <th colspan="2">Cost</th>
         <th>Margin</th>
+        @if (Model.ShowMarginCheckboxes)
+        {
+            <th>Approve?</th>
+        }
     </tr>
 @for (int i = 0; i < campaignAmounts.Count; i++)
 {
@@ -29,9 +33,7 @@
         lastPid = ca.Pid;
         grayRow = !grayRow;
         firstRow = true;
-    }
-    else
-    {
+    } else {
         firstRow = false;
     }
     //decimal perunit = ca.Revenue / ca.NumUnits;
@@ -40,7 +42,12 @@
         <td>
             @if (firstRow)
             {
-                @Html.ActionLink(ca.CampaignName, "EditCampaign", "Workflow", new { pid = ca.Pid }, new { target = "_blank", title = ca.CampaignDisplayName })
+                if (Model.ShowInvoiceCheckboxes || !Model.ShowMarginCheckboxes)
+                {
+                    @Html.ActionLink(ca.CampaignName, "EditCampaign", "Workflow", new { pid = ca.Pid }, new { target = "_blank", title = ca.CampaignDisplayName })
+                } else {
+                    @ca.CampaignName
+                }
             }
         </td>
         <td>@ca.AffiliateName</td>
@@ -48,13 +55,13 @@
         <td>@ca.RevenueCurrency</td>
         <td style="text-align: right">@ca.Revenue.ToString("N2")</td>
         <td style="text-align: right">@ca.InvoicedAmount.ToString("N2")</td>
-        @if (Model.ShowCheckboxes)
+        @if (Model.ShowInvoiceCheckboxes)
         {
-            <td>
+            <td style="text-align: center">
                 @if ((ca.Revenue >= 0 && ca.InvoicedAmount < ca.Revenue) || (ca.Revenue < 0 && ca.InvoicedAmount != ca.Revenue))
                 {
                     string checkedString = "checked=\"checked\"";
-                    <input type="checkbox" name="idpairs" value="@(ca.Pid + "," + ca.AffId)" class="chk@(ca.Pid)" @checkedString />
+                    <input type="checkbox" name="idpairs" value="@(ca.Pid + "," + ca.AffId)" class="chk@(ca.Pid)" @Html.Raw(checkedString) />
                 }
             </td>
             @* Note: We assume that each pid/affid pair has a unique currency *@
@@ -69,6 +76,21 @@
         <td>@ca.CostCurrency</td>
         <td style="text-align: right">@ca.Cost.ToString("N2")</td>
         <td style="text-align: right; white-space: nowrap">@ca.MarginPct.ToString("P1")</td>
+        @if (Model.ShowMarginCheckboxes)
+        {
+            string onclickString = "";
+            if (ca.MarginPct <= 0 || ca.MarginPct >= 1)
+            {
+                onclickString = "onclick=\"if (this.checked) GetMarginComment(" + ca.Pid + ", " + ca.AffId + ", this)\"";
+            }
+            else if (Model.MinimumMarginPct.HasValue && ca.MarginPct < Model.MinimumMarginPct.Value && ca.MarginPct > 0)
+            {
+                onclickString = "onclick=\"if (this.checked) ConfirmApproval('" + ca.MarginPct.ToString("P1") + "', this)\"";
+            }
+            <td style="text-align: center">
+                <input type="checkbox" name="idpairs2" id="mchk@(ca.Pid)_@(ca.AffId)" value="@(ca.Pid + "," + ca.AffId)" @Html.Raw(onclickString) />
+            </td>
+        }
     </tr>
     if (i == campaignAmounts.Count - 1 || ca.Pid != campaignAmounts[i + 1].Pid)
     {
@@ -83,7 +105,7 @@
             <td style="font-weight: bold">@sa.RevenueCurrency</td>
             <td style="font-weight: bold; text-align: right">@sa.Revenue.ToString("N2")</td>
             <td style="font-weight: bold; text-align: right">@sa.InvoicedAmount.ToString("N2")</td>
-            @if (Model.ShowCheckboxes)
+            @if (Model.ShowInvoiceCheckboxes)
             {
                 <td></td>
                 <td></td>
@@ -91,7 +113,66 @@
             <td style="font-weight: bold">@sa.CostCurrency</td>
             <td style="font-weight: bold; text-align: right">@sa.Cost.ToString("N2")</td>
             <td></td>
+            @if (Model.ShowMarginCheckboxes)
+            {
+                <td></td>
+            }
         </tr>
     }
 }
 </table>
+
+@if (Model.ShowMarginCheckboxes)
+{
+    foreach (var ca in Model.CampaignAmounts)
+    {
+        <input type="hidden" name="comment@(ca.Pid)_@(ca.AffId)" />
+    }
+
+<div id="dlgMarginComment">
+    Please enter comments for 0, negative or 100 % margin:
+    <textarea id="textMarginComment" style="width: 400px; height: 135px"></textarea>
+</div>
+
+<script type="text/javascript">
+
+    $(document).ready(function () {
+        $('#dlgMarginComment').kendoWindow({
+            width: "450px",
+            title: "Margin Approval Comments",
+            modal: true,
+            visible: false,
+            close: MarginCommentClose
+        });
+    });
+
+    function MarginCommentClose(e) {
+        var dlg = $('#dlgMarginComment');
+        var pid = dlg.data("pid");
+        var affid = dlg.data("affid");
+        var comment = TrimmedMarginComment();
+        $('input[name="comment' + pid + '_' + affid + '"]').val(comment);
+        if (!comment)
+            $('#mchk' + pid + '_' + affid).attr('checked', false);
+    }
+
+    function TrimmedMarginComment() {
+        return $.trim($('#textMarginComment').val());
+    }
+
+    function GetMarginComment(pid, affid, el) {
+        $('#textMarginComment').val($('input[name="comment' + pid + '_' + affid + '"]').val());
+        var dlg = $('#dlgMarginComment');
+        dlg.data("pid", pid);
+        dlg.data("affid", affid);
+        var win = dlg.data("kendoWindow");
+        //win.setOptions({});
+        win.open();
+    }
+
+    function ConfirmApproval(percentString, el) {
+        if (!confirm("Approve  " + percentString + "  margin?"))
+            el.checked = false;
+    }
+</script>
+}
