--- a/1/EomTool/EomToolWeb/Views/Workflow/CampaignAffiliateAmounts.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Workflow/CampaignAffiliateAmounts.cshtml
@@ -130,7 +130,7 @@
     }
 
 <div id="dlgMarginComment">
-    Please enter comments for 0, negative or 100 % margin:
+    Explain why:
     <textarea id="textMarginComment" style="width: 400px; height: 135px"></textarea>
 </div>
 
