--- a/1/EomTool/EomToolWeb/Views/Admin/Index.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Admin/Index.cshtml
@@ -12,6 +12,8 @@ Accounting Period:
 @Html.ActionLink("Advertisers", "Index", "Advertisers")<br />
 @Html.ActionLink("Affiliates", "Index", "Affiliates")<br />
 <br />
+@Html.ActionLink("Margin Approvals", "MarginApprovals", "Admin")<br />
+<br />
 @Html.ActionLink("Media Buyer Approvals", "Summary", "Payouts")<br />
 @Html.ActionLink("Invoice Requests", "Summary", "Invoices")<br />
 @Html.ActionLink("Extra Item Importer", "Import", "ExtraItems")<br />
