handle case of zero revenue

--- a/1/EomTool/EomToolWeb/Views/Admin/MarginApprovals.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Admin/MarginApprovals.cshtml
@@ -12,13 +12,13 @@ Accounting Period:
 <table style="border: 1px solid gray; border-spacing: 10px 0">
     <tr>
         <th>Created</th>
-        <th>Used</th>
+        <th>Finalized</th>
         <th>Pid</th>
         <th>Campaign</th>
         <th>Affiliate</th>
         <th colspan="2">Revenue</th>
         <th colspan="2">Cost</th>
-        <th>Margin</th>
+        <th>Margin%</th>
         <th>ApprovedBy</th>
         <th>Comments</th>
     </tr>
