--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_DailySummaryPartial.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_DailySummaryPartial.cshtml
@@ -110,7 +110,18 @@
                 { field: "ConversionPct", aggregate: "agg" },
                 { field: "Revenue", aggregate: "sum" },
                 { field: "EPC", aggregate: "agg" }
-            ]
+            ],
+            requestEnd: function (e) {
+                if (e.type == "read") {
+                    var infos = e.response.data;
+                    for (var i = 0; i < infos.length; i++) {
+                        infos[i].Date = infos[i].Date.replace(/\d+/, function (n) {
+                            var time = parseInt(n);
+                            return parseInt(time) + new Date(time).getTimezoneOffset() * 60000;
+                        });
+                    }
+                }
+            }
         });
     }
 
