MBA approval fix- pub reports; AdvPayStatus view fix

--- a/1/EomTool/EomToolWeb/Views/Payouts/Summary.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Payouts/Summary.cshtml
@@ -141,7 +141,11 @@
             });
 
             // Display the publisher report
-            $.get('@Url.Action("PublisherReport", new { mode = Model.Mode })?affid=' + affid + '&ts=' + new Date().getTime(), function (publisherReportContent) {
+            var data = {
+                affid: affid,
+                ts: new Date().getTime()
+            };
+            $.get('@Url.Action("PublisherReport", new { mode = Model.Mode })', data, function (publisherReportContent) {
                 $('#publisherReport').empty().html(publisherReportContent);
             });
         }
