--- a/1/EomTool/EomToolWeb/Views/Admin/Index.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Admin/Index.cshtml
@@ -18,4 +18,5 @@ Accounting Period:
 @Html.ActionLink("Invoice Requests", "Summary", "Invoices")<br />
 @Html.ActionLink("Extra Item Importer", "Import", "ExtraItems")<br />
 <br />
+@Html.ActionLink("Period Maintenance", "PeriodMaintenance", "Admin")<br />
 @Html.ActionLink("Settings", "Settings", "Admin")<br />
