Adv & Aff Maintenance

--- a/1/EomTool/EomToolWeb/Views/Admin/Index.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Admin/Index.cshtml
@@ -18,5 +18,6 @@ Accounting Period:
 @Html.ActionLink("Invoice Requests", "Summary", "Invoices")<br />
 @Html.ActionLink("Extra Item Importer", "Import", "ExtraItems")<br />
 <br />
-@Html.ActionLink("Period Maintenance", "PeriodMaintenance", "Admin")<br />
+@Html.ActionLink("Advertiser Maintenance", "AdvertiserMaintenance", "Admin")<br />
+@Html.ActionLink("Affiliate Maintenance", "AffiliateMaintenance", "Admin")<br />
 @Html.ActionLink("Settings", "Settings", "Admin")<br />
