--- a/1/EomTool/EomToolWeb/Views/Advertisers/Show.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Advertisers/Show.cshtml
@@ -28,6 +28,14 @@
             <td>@Html.LabelFor(m => m.invoicing_status)</td>
             <td class="bold">@Html.DisplayFor(m => m.invoicing_status)</td>
         </tr>
+        <tr>
+            <td>@Html.LabelFor(m => m.comments)</td>
+            <td class="bold">@Html.DisplayFor(m => m.comments)</td>
+        </tr>
+        <tr>
+            <td>@Html.LabelFor(m => m.prev_open_balance)</td>
+            <td class="bold">@Html.DisplayFor(m => m.prev_open_balance)</td>
+        </tr>
     </table>
 </fieldset>
 
