--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_HelloPartial.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_HelloPartial.cshtml
@@ -1,8 +1,8 @@
-﻿@model ClientPortal.Web.Models.IndexModel
+﻿@model bool
 
 @if (Request.IsAuthenticated)
 {
-    if (Model.HasLogo)
+    if (Model) // HasLogo
     {
     <p style="text-align: center">
         <img src="@Url.Action("Logo")" />
