--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_LoginPartial.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,11 +1,11 @@
-﻿@model ClientPortal.Web.Models.IndexModel
+﻿@model bool
 
 @if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
     {
         @Html.AntiForgeryToken()
-        if (Model.HasLogo)
+        if (Model) // HasLogo
         {
             <span style="margin-right: 20px">Hello, @Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage" })!</span>          
         }
