--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Summary.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Summary.cshtml
@@ -1,20 +1,18 @@
 ﻿
-<div id="sampleChartSection" class="k-content">
+<div id="summaryChartSection" class="k-content">
     <div class="chart-wrapper">
-        <div id="sampleChart"></div>
+        <div id="summaryChart"></div>
     </div>
 </div>
-<div id="sampleGrid"></div>
 
 <script>
     $(document).ready(function () {
-        var datasource = CreateSampleDataSource();
-        CreateSampleGrid(datasource);
-        CreateSampleChart(datasource);
+        var datasource = CreateSummaryDataSource();
+        CreateSummaryChart(datasource);
         datasource.read();
     });
 
-    function CreateSampleDataSource() {
+    function CreateSummaryDataSource() {
         return new kendo.data.DataSource({
             serverPaging: true,
             serverSorting: true,
@@ -74,33 +72,8 @@
         });
     }
 
-    function CreateSampleGrid(datasource) {
-        $("#sampleGrid").kendoGrid({
-            dataSource: datasource,
-            autoBind: false,
-            height: 500,
-            //groupable: true,
-            //sortable: true,
-            //pageable: {
-            //    refresh: true,
-            //    pageSizes: true,
-            //    buttonCount: 5
-            //},
-            columns: [
-                { field: 'Date', format: '{0:d}' },
-                { field: 'Impressions', format: '{0:n0}' },
-                { field: 'Clicks', format: '{0:n0}' },
-                { field: 'Conversions' },
-                { field: 'Revenue', title: 'Spend' }
-            ],
-            filterable: false,
-            sortable: false,
-            pageable: true
-        });
-    }
-
-    function CreateSampleChart(dataSource) {
-        $("#sampleChart").kendoChart({
+    function CreateSummaryChart(dataSource) {
+        $("#summaryChart").kendoChart({
             dataSource: dataSource,
             autoBind: false,
             chartArea: {
@@ -109,8 +82,7 @@
             theme: $(document).data("kendoSkin") || "default",
             series: [
                 { type: "line", field: "Clicks", name: "Clicks", axis: "clicks", markers: { visible: false }, tooltip: { template: "#= kendo.format('{0:d}', category) #: #= kendo.format('{0:N0}',value) #" } },
-                { type: "line", field: "Conversions", name: "Conversions", axis: "conversions", tooltip: { template: "#= kendo.format('{0:d}', category) #: #= kendo.format('{0:N0}',value) #" }, dashType: "dot" },
-                //{ type: "line", field: "Revenue", name: "Spend", axis: "spend", markers: { visible: false }, tooltip: { template: "#= kendo.format('{0:d}', category) #: #= kendo.format('{0:C}',value) #" } }
+                { type: "line", field: "Revenue", name: "Spend", axis: "spend", markers: { visible: false }, tooltip: { template: "#= kendo.format('{0:d}', category) #: #= kendo.format('{0:C}',value) #" } }
                 // aggregate: "sum",
             ],
             categoryAxis: {
@@ -121,8 +93,7 @@
             },
             valueAxis: [
                 { name: "clicks", labels: { format: "N0", step: 2 }, title: { text: "Clicks" } },
-                { name: "conversions", labels: { format: "N0", step: 2 }, title: { text: "Conversions" } }
-                //{ name: "spend", labels: { format: "C", step: 2 }, title: { text: "Spend" } }
+                { name: "spend", labels: { format: "C", step: 2 }, title: { text: "Spend" } }
             ],
             tooltip: {
                 visible: true
